Fix issues with memory and yarn